+ Added Master.introduceFunction()
+ Added Master.isFunction()
+ Added Master.removeFunction()
$ Changed the default sleep on getRequest to 0.3 seconds
$ Fixed bugs with Master.dateSince()
$ Fixed bug with Master.Raw()
$ Changed internal mechanism for timers, handlers and functions
$ Renamed Master.invokeEvent() to Master.triggerEvent()
+ Added Master.getPluginName()
- Removed alt Plugins.addHandler(), now Master.addHandler()
- Removed alt Plugins.addTimer(), now Master.addTimer()
+ Added Master.getActiveTimer()
+ Added Master.triggerSingleEvent()
+ Added Master.triggerSingleEventArray()
+ Added Master.syncChannelLists()
+ Added a parser for colours and formatting
+ Added Channel class
+ Added Master.getChannelTopic()
+ Added User class
$ Recoded entire user management system
$ Made the socket core more efficient


Version 1.1.0 (15/05/2010)
--------------------------
+ Added Master.getChannel()
+ Added Master.getChannelBanList()
+ Added Master.getChannelInviteList()
+ Added Master.getChannelExceptList()
+ Put more info to Master.getUser()
+ Added Master.parseHostmask()
+ Added Master.getUsername()
$ Renamed Master.activatePlugin() to Master.activatePlugin()
$ Renamed Master.deactivatePlugin() to Master.deactivatePlugin()
$ Renamed Master.reloadPlugin() to Master.reactivatePlugin()
$ Added $bKeepModes (before $iDelay) to Master.getWhois()
$ Renamed Master.isBotInChannel() to Master.IsChildInChannel()


Version 1.0.1 (04/03/2010)
--------------------------
$ Added $sChannel (opt) parameter to all IBC functions - note, /NOT/ IRC
	channels, it's different communication channels
+ Added Master.getIBCCount()
- Removed Master.getMasterConfig()
+ Added Master.getNetworkConfig()
+ Added Control::botGetNames()
$ Updated Evaluation, DynamicCommand plugins
+ Added Relay plugin
+ Added UPTIME in CTCP
+ Quietly added Master.dateSince(), to be documented further


Version 1.0.0 (05/02/2010)
--------------------------
> Yeah, this log started. Just take everything is read, eh?