@@ -6,7 +6,7 @@
  *	@ignore
  *	@copyright David Weston (c) 2010 -> http://www.typefish.co.uk/licences/
  *	@author David Weston <westie@typefish.co.uk>
- *	@version 1.1.1-RC6 (Git commit: 09eae40a2d1115ab2c6e5a45c9734a09722196b1)
+ *	@version 1.1.1-RC6 (Git commit: b9b72a66c442462b03601b9a9d0bcd30a627e93e)
  */
 
 
@@ -28,6 +28,10 @@ include "System/Channel.php";
 include "System/User.php";
 include "System/StaticLibrary.php";
 include "System/Configuration.php";
+
+
+/* Uncomment this to include debugging functionality */
+// include "System/Debug.php";
 
 
 /* Set up the controlling classes */
